Code review web-test and changed database, api, api-test